[package]
name = "low_poly_vtt" 
version = "0.1.0"
publish = false
authors = ["Lee-Orr"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "client"
]

server = []

client = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

client-dev = [
    "bevy/dynamic",
]


[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.10" }
bevy_asset_loader = { version = "0.11" }
bevy_egui = { version = "0.14" }
rand = "0.8.3"
ggrs = "0.9.1"
bevy_ggrs = "0.9"
bytemuck = { version = "1.7", features=["derive"]}
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
bevy_common_assets = { version = "0.2.0", features = ["json"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
redux-rs = "0.3.3"
im = "15.1.0"
serde_json = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.57", features = ["Element", "Document", "Window", "Location"]}
wasm-bindgen = "0.2"
ggrs = { version = "0.9.1", features = ["wasm-bindgen"] }
gloo-events = "0.1.2"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
warp = "0.3.1"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-stream = "0.1"


[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
